syntax = "proto3";

import "sigmap/sigmap.proto";

option go_package = "sigmaos/netsigma/proto";

message ListenRequest {
        Taddr addr = 1;
};

message ListenResponse {
        Rerror err = 1;
        TendpointProto endpoint = 2;
};

message DialRequest {
        TendpointProto Endpoint = 1;
};

message DialResponse {
        Rerror err = 1;
};
